@@ -59,7 +59,7 @@ public:
 	virtual void DrawCommand(const string& Command) = 0;
 	virtual void DoPrologue() = 0;
 	virtual void DoEpilogue() = 0;
-	virtual void Consolise() = 0;
+	virtual void Consolise(bool SetTextColour = true) = 0;
 	virtual ~i_execution_context() = default;
 };
 
