@@ -1,3 +1,7 @@
+drkns 23.07.2016 12:48:09 +0200 - build 4744
+
+1. Не сбрасываем цвет текста при вложенных вызовах FCTL_GETUSERSCREEN.
+
 drkns 16.07.2016 13:51:54 +0200 - build 4743
 
 1. Иногда, если очень повезёт, вызов редактора после работы с панельным плагином мог приводить к падению.
